--- a/src/Weather.css
+++ b/src/Weather.css
@@ -6,7 +6,8 @@
   padding: 16px;
 }
 .Weather form {
-  margin-bottom: 20px;
+  margin-top: 20px;
+  padding-left: 30px;
 }
 .Weather h1 {
   color: #878787;
@@ -14,31 +15,39 @@
   font-weight: 100;
   margin: 20px 0 0 0;
   line-height: 29px;
+  padding-left: 30px;
 
   display: block;
   font-family: Arial, sans-serif;
   font-size: 24px;
 }
 .Weather ul {
-  margin: 0;
+  margin: auto;
   padding: 0;
 }
 .Weather img {
-  margin-top: 20px;
-  margin-bottom: 40px;
+  margin-left: 10px;
+  margin-bottom: 30px;
 }
 .Weather li {
+  padding-left: 30px;
   font-size: 16px;
   font-weight: 100;
-  line-height: 19px;
+  line-height: 25px;
   list-style: none;
 }
 .Weather .temperature {
-  font-size: 54px;
+  font-size: 64px;
   color: rgb(33, 33, 33);
   font-weight: 400;
+  margin-left: -20px;
 }
 .Weather .unit {
   position: relative;
   top: -25px;
+  font-weight: 600;
+  font-size: 30px;
+}
+.weather-extras {
+  padding-top: 25px;
 }
