--- a/src/Weather.css
+++ b/src/Weather.css
@@ -10,7 +10,7 @@
   padding-left: 30px;
 }
 .Weather h1 {
-  color: #878787;
+  color: #e15151;
   font-size: 24px;
   font-weight: 100;
   margin: 20px 0 0 0;
